[package]
name = "clopy"
version = "0.1.0"
edition = "2021"
authors = ["Jedidiah Park"]
description = "it's like git shallow clone, but it only makes a copy"
readme = "README.md"
repository = "https://github.com/kjpark/clopy"
license = ""
keywords = ["git", "clone", "degit", "copy", "template"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
bytes = "1.1"
flate2 = "1.0"
reqwest = { version = "0.11" }
tar = "0.4"
tokio = { version = "1", features = ["full"] }